# cml-terraform-converter

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  cml-terraform-converter.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
CML2Topology/: CML2Topology.py  __init__.py
src/cml2tf/: __init__.py  main.py
src/cml2tf/templates/: main.tf.j2
src/cml2tf/topology/: CML2Topology.py  __init__.py  nodeconfig.py
templates/: main.tf.j2  variables.tf.j2
tests/: requirements.txt  test_cml2topology.py  test_main.py  test_nodeconfig.py
tests/testdata/: mini.yaml  topology.yaml
