[project]
name = "cml2tf"
dynamic = ["version"]
description = "Convert CML2 lab topologies from YAML into HCL."
authors = [
    {name = "Piotr Wojciechowski", email = "piotr@it-playground.pl"},
]
dependencies = [
    "PyYAML>=6.0.1",
    "argparse>=1.4.0",
    "Jinja2>=3.1.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
cml2tf = "cml2tf.main:main"

[tool.pdm]
package-type = "application"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
]

lint = [
    "ruff>=0.1.13",
]

# to install, add it into group "lint", could also go into dev
# pdm add -dG lint ruff

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.pydocstyle]
convention = "google"

